mdapipkg1/unpackaged/objects/cloudx_cms__SS_Carousel_Slide__c.object
<CustomObject>
    <description>Carousel Slide</description>
    <fields>
        <fullName>Picklist1__c</fullName>
        <label>Picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
                <value>
                    <fullName>This is my test pick-list label to reproduce dx deployment issue.This is my test pick-list label to reproduce dx deployment issue.This is my test to ** reproduce dx deployment issue.(i.e, Test data value/string) &amp; test a piclist value exceeds 255</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <label>Picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Picklist1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cloudx_cms__Text_Position__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Val1</fullName>
                </value>
                <value>
                    <fullName>Val2</fullName>
                </value>
                <value>
                    <fullName>Val3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudx_cms__Autoplay__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Play</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Button_Label__c</fullName>
        <inlineHelpText>Short text for call-to-action button.</inlineHelpText>
        <label>Button Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Button_URL__c</fullName>
        <inlineHelpText>Add a destination URL for button. Must start with http:// or https://</inlineHelpText>
        <label>Button URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Button_Variant__c</fullName>
        <inlineHelpText>Choose a button design: Branding Editor, Neutral, or Bare.</inlineHelpText>
        <label>Button Variant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>brand</fullName>
                    <default>true</default>
                    <label>brand</label>
                </value>
                <value>
                    <fullName>neutral</fullName>
                </value>
                <value>
                    <fullName>base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudx_cms__Carousel__c</fullName>
        <label>Carousel</label>
        <referenceTo>cloudx_cms__SS_Carousel__c</referenceTo>
        <relationshipLabel>Carousel Slides</relationshipLabel>
        <relationshipName>Carousel_Slides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Description_Size__c</fullName>
        <description>Choose an appropriate Body text size.</description>
        <inlineHelpText>Choose an appropriate Body text size.</inlineHelpText>
        <label>Body Text Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>regular</fullName>
                    <default>true</default>
                    <label>regular</label>
                </value>
                <value>
                    <fullName>small</fullName>
                </value>
                <value>
                    <fullName>This is my test pick-list label to reproduce dx deployment issue.This is my test pick-list label to reproduce dx deployment issue.This is my test to ** reproduce dx deployment issue.(i.e, Test data value/string) &amp; test a piclist value exceeds 255</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudx_cms__Description_Text_Color__c</fullName>
        <defaultValue>&quot;#000&quot;</defaultValue>
        <inlineHelpText>Description text supports Hex or RGB color codes.</inlineHelpText>
        <label>Body Text Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Description__c</fullName>
        <inlineHelpText>Add an enticing summary of your content.</inlineHelpText>
        <label>Body(Html tags allowed)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Height__c</fullName>
        <defaultValue>300</defaultValue>
        <label>Height (In Px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Image_URL__c</fullName>
        <inlineHelpText>Add an image URL. Must start with http:// or https:// for external pages.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Loop_Video__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Loop Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Raw_MP4_Video_URL__c</fullName>
        <description>Raw MP4 Video URL</description>
        <inlineHelpText>Raw MP4 Video URL</inlineHelpText>
        <label>Raw MP4 Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Raw_OGG_Video_URL__c</fullName>
        <description>Raw Video URL in OGG Format</description>
        <inlineHelpText>Raw Video URL in OGG Format</inlineHelpText>
        <label>Raw OGG Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Raw_WEBM_Video_URL__c</fullName>
        <description>Raw Video URL in Webm Format</description>
        <inlineHelpText>Raw Video URL in Webm Format</inlineHelpText>
        <label>Raw WEBM Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Show_Video_Controls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Video Controls - Play, Pause etc</description>
        <inlineHelpText>Show Video Controls - Play, Pause etc</inlineHelpText>
        <label>Show Video Controls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Slide_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Prioritize slides in numerical order (Ie. 1, 2, 3).</inlineHelpText>
        <label>Slide Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Text_Alignment__c</fullName>
        <inlineHelpText>Choose alignment of text: left, center, right</inlineHelpText>
        <label>Text Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cloudx_cms__Text_Position__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>left</fullName>
                    <default>true</default>
                    <label>left</label>
                </value>
                <value>
                    <fullName>center</fullName>
                </value>
                <value>
                    <fullName>right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudx_cms__Text_Height__c</fullName>
        <defaultValue>150</defaultValue>
        <description>Caption: Height(Not applicable for overlay position. In Px)</description>
        <inlineHelpText>Caption: Height(Not applicable for overlay position. In Px)</inlineHelpText>
        <label>Caption Height in px.(Not for overlay)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Text_Overlay_Background__c</fullName>
        <defaultValue>&quot;rgba(0,0,0,0.4)&quot;</defaultValue>
        <inlineHelpText>Opacity of overlay background controlled by RGBA color values.</inlineHelpText>
        <label>Caption Background</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Text_Position__c</fullName>
        <inlineHelpText>Card (bottom of image/video) or Overlay (full image/video)</inlineHelpText>
        <label>Caption Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>overlay</fullName>
                    <default>true</default>
                    <label>overlay</label>
                </value>
                <value>
                    <fullName>top</fullName>
                </value>
                <value>
                    <fullName>middle</fullName>
                </value>
                <value>
                    <fullName>bottom</fullName>
                </value>
                <value>
                    <fullName>card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudx_cms__Title_Text_Color__c</fullName>
        <defaultValue>&quot;#000&quot;</defaultValue>
        <inlineHelpText>Banner title text supports Hex color codes.</inlineHelpText>
        <label>Title Text Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Title_Text_Size__c</fullName>
        <inlineHelpText>Choose an appropriate banner title size.</inlineHelpText>
        <label>Title Text Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>large</fullName>
                    <default>true</default>
                    <label>large</label>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cloudx_cms__Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Craft a short attention-grabbing banner title.</inlineHelpText>
        <label>Title(Html tags allowed)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloudx_cms__Video_Embed_URL__c</fullName>
        <inlineHelpText>Add a video URL from YouTube or Vimeo. Must start with http:// or https://</inlineHelpText>
        <label>Video Embed URL</label>
        <type>Url</type>
    </fields>
    <label>Carousel Slide</label>
    <nameField>
        <displayFormat>CSLIDE-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carousel Slides</pluralLabel>
    <recordTypes>
        <fullName>cloudx_cms__image</fullName>
        <active>true</active>
        <description>Image Banner</description>
        <label>Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>cloudx_cms__video</fullName>
        <active>true</active>
        <description>Video Banner</description>
        <label>Video</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>